Minor bug and alignment fix.

--- a/src/views/delta_animation/delta_animation.css
+++ b/src/views/delta_animation/delta_animation.css
@@ -22,5 +22,5 @@
 }
 
 #info-label {
-    margin-left: 20px;
+    margin-left: 50px;
 }
